--- a/playbooks/check_space.yaml
+++ b/playbooks/check_space.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Check disk space on Ubuntu server
-  hosts: LXC - Valby
+  hosts: "LXC - Valby"
   become: yes
   tasks:
     - name: Check disk space using df -h
